k8s/apps/languagetool/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: languagetool
  labels:
    app: languagetool
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: languagetool
  template:
    metadata:
      labels:
        app: languagetool
    spec:
      nodeSelector:
        kubernetes.io/hostname: xgm-hm
      containers:
        - name: languagetool
          image: meyay/languagetool:latest@sha256:0b4a849aa00ccb2d157e40cc3bc2a4db56529ce4a20b923452148d5f84a3dd8d
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: 1Gi
            limits:
              memory: 4Gi
          volumeMounts:
            - name: ngrams
              mountPath: /ngrams
      volumes:
        - name: ngrams
          persistentVolumeClaim:
            claimName: languagetool-ngrams
