k8s/apps/languagetool/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: languagetool
spec:
  selector:
    app: languagetool
  ports:
    - port: 8081
      targetPort: 8081
