k8s/apps/languagetool/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: languagetool
spec:
  ingressClassName: traefik
  rules:
    - host: languagetool.xgabrielmorales.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: languagetool
                port:
                  number: 8081
